# vendor-plugin-template

./: Dockerfile  README.md  openapi.yaml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yaml
app/: main.py
tests/: test_health.py
